--- a/SVG Animations/style.css
+++ b/SVG Animations/style.css
@@ -1,30 +1,28 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Dela Gothic One", sans-serif;
-    color: #FFF;
-    font-size: x-large;
 }
 
 html,
-body{
+body {
     height: 100%;
     width: 100%;
     background-color: #111;
 }
 
-
-
-#string{
+#string {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 200px;
     width: 100%;
-    /* background-color: white; */
+    margin-top: 10em;
 }
 
-svg{
-    background-color: teal;
-    /* width: 90%; */
-    width: 100%;
-    height: 100%;
+svg {
+    width: 90%; /* Adjust width as needed */
+    height: auto;
+    margin-top: 50px; /* Margin from the top */
 }
